--- a/config/my1.cnf
+++ b/config/my1.cnf
@@ -6,3 +6,5 @@ mysqlx-port=33100
 socket=/home/mysql/data/3310/my.socks
 mysqlx-socket=/home/mysql/data/3310/myx.socks
 log-error=/home/mysql/data/3310/my.error
+
+server-id=1
