--- a/config/my2.cnf
+++ b/config/my2.cnf
@@ -6,3 +6,5 @@ mysqlx-port=33200
 socket=/home/mysql/data/3320/my.socks
 mysqlx-socket=/home/mysql/data/3320/myx.socks
 log-error=/home/mysql/data/3320/my.error
+
+server-id=2
