--- a/templates/configs/my80.cnf
+++ b/templates/configs/my80.cnf
@@ -1,12 +1,13 @@
 [mysqld]
-basedir=${MYSQL_DIR}/80
-datadir=${MYSQL_DIR}/data/80/data
-port=3380
+basedir=${MYSQL_DIR}/80                 # 実行ファイルの存在するフォルダ
+datadir=${MYSQL_DIR}/data/80/data       # DBデータの格納されるフォルダ
+port=3380                               # サーバー待ち受けポート
 mysqlx-port=33800
 socket=/tmp/my80.sock
 mysqlx-socket=/tmp/my80x.socks
 log-error=${MYSQL_DIR}/data/80/my.error
-local_infile=on
-enforce_gtid_consistency=on
-gtid_mode=on
-server_id=80
+local_infile=on                         # loadDumpでローカルファイルシステムからの読み込みを許可する設定
+enforce_gtid_consistency=on             # GTID整合性に違反するトランザクションを禁止する設定
+gtid_mode=on                            # GTIDを用いる設定
+server_id=80                            # サーバーごとに一意なID
+# MySQL 8.0 以上ではバイナリログ出力がデフォルトのため、log_bin=on は不要
